test/tests/compiler/18_structures/invalid_struct_tags/return_type_undeclared.plx
pub fn exit(status: i32) none;

#  In our implementation, this fails tag resolution because it specifies an
#  undeclared type. In a fully conforming implementation, it fails because you
#  can't define a function with incomplete return type
pub fn foo(none) struc s {
    exit(nil)
}
